# pyqt_cython_and_c

./: README.md  progressbar.py  setup.py
cproject/: CMakeLists.txt  cprogram.c  cprogram.h
pycproject/: cprogram.pxd  cprogram.pyx
